MB-19002 Address data race in TapConnMap::shutdownAllConnections

Ensure the access to "deadConnections" and "all" are
protected by first taking the connsLock mutex lock.

Change-Id: I1d19ce610dc3b35edcad124c1961c5380e84eb8d
Reviewed-on: http://review.couchbase.org/62347
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>